feat: inicio a tela de escolha de avatar

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -7,7 +7,7 @@
 
     "textPageTitleLogin":"Vamos entrar.",
     "textPageSubtitleLogin":"Sentimos sua falta!",
-    "textPageTitleProfileRegisterPage":"Escolha uma foto de perfil!",
+    "textPageTitleProfileRegisterPage":"Escolha seu avatar!",
     "textPageSubtitleProfileRegisterPage":"Não se esqueça de sorrir!",
     "textPageTitleRegistrationPage":"Bem vinde!",
     "textSubtitleRegistrationPage":"Será um prazer te conhecer!",
