--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -7,10 +7,8 @@
 
     "textPageTitleLogin":"Vamos entrar.",
     "textPageSubtitleLogin":"Sentimos sua falta!",
-    "textPageTitleProfileRegisterPage":"Escolha seu avatar!",
+    "textPageTitleProfileRegisterPage":"Escolha seu avatar",
     "textPageSubtitleProfileRegisterPage":"Não se esqueça de sorrir!",
-    "textPageTitleRegistrationPage":"Bem vinde!",
-    "textSubtitleRegistrationPage":"Será um prazer te conhecer!",
 
     "textButtonForgotPassword":"Esqueceu sua senha?",
     "textButtonDontHaveAccount":"Não possui uma conta?",
@@ -23,7 +21,7 @@
     "textErrorEmail":"Por favor, digite um e-mail válido",
     "textErrorPronouns":"ex: Ela/Dela, Ele/Dele, Ela/Elu",
     "textErrorDifferentPasswords":"Os campos de senha devem ser iguais",
-    "textErrorEmptyAvatar": "Por favor selecione seu avatar!",
+    "textErrorEmptyAvatar": "Por favor, selecione seu avatar!",
 
     "textUsername":"Usuário",
     "textPassword":"Senha",
@@ -43,6 +41,7 @@
     "textReady": "Pronto",
     "textCancel": "Cancelar",
     "textConfirm": "Confirmar",
+    "textAdvance": "Avançar",
 
     "textDontBeAfraidToBeCreative":"Agora escolha um nome para todos verem, seja criativo!",
     "textHowDoYouPreferWeReferToYou":"Como prefere que as pessoas se refiram a você?",
@@ -51,10 +50,11 @@
     "textLettersAndNumbers":"- letras e números",
     "textIReadAndAcceptThe":"Eu li e aceito os ",
     "textTermsAndConditions":"termos e condições",
-    "textWelcome": "Bem-vinde",
-    "textMeetingYouWillBeAPleasure":"Será um prazer te conhecer!",
+    "textWelcome": "Olá!,",
+    "textMeetingYouWillBeAPleasure":"Será um prazer te conhecer.",
     "textSayYourNameThisInfoIsPrivate":"Nos diga seu nome!\nEssa informação aparecerá apenas para você.",
     "textTellUsTheEmailAssociatedWithYourAccount":"Nos diga seu e-mail, ele será associado a sua conta",
+    "textYourRepresentationHereInside":"Uma representação sua aqui dentro!",
     
     "textExamplePronouns":"Exemplo: Ela/Dela, Elu/Delu, Ela/Elu",
 
