--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -22,6 +22,7 @@
     "textErrorPronouns":"ex: Ela/Dela, Ele/Dele, Ela/Elu",
     "textErrorDifferentPasswords":"Os campos de senha devem ser iguais",
     "textErrorEmptyAvatar": "Por favor, selecione seu avatar!",
+    "textErrorDropdown": "Algo deu errado!",
 
     "textUsername":"Usuário",
     "textPassword":"Senha",
@@ -42,6 +43,8 @@
     "textCancel": "Cancelar",
     "textConfirm": "Confirmar",
     "textAdvance": "Avançar",
+    "textLoading":"Carregando...",
+    "textFinish":"Finalizar",
 
     "textDontBeAfraidToBeCreative":"Agora escolha um nome para todos verem, seja criativo!",
     "textHowDoYouPreferWeReferToYou":"Como prefere que as pessoas se refiram a você?",
