registro de usuário funcionando como o esperado

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -24,6 +24,8 @@
     "textErrorEmptyAvatar": "Por favor, selecione seu avatar!",
     "textErrorDropdown": "Algo deu errado!",
 
+    "textSuccessRegistration":"Usuário Registrado",
+
     "textUsername":"Usuário",
     "textPassword":"Senha",
     "textPasswordConfirmation":"Confirmar senha",
