Ajustes de review na home

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -26,6 +26,8 @@
 
     "textSuccessRegistration":"Usuário Registrado",
 
+    "textDrawerAddLocation":"Adicionar Local",
+
     "textUsername":"Usuário",
     "textPassword":"Senha",
     "textPasswordConfirmation":"Confirmar senha",
