Ajustes pós review

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -27,6 +27,7 @@
     "textSuccessRegistration":"Usuário Registrado",
 
     "textDrawerAddLocation":"Adicionar Local",
+    "textDrawerMyAccount":"Minha Conta",
 
     "textUsername":"Usuário",
     "textPassword":"Senha",
