--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -24,6 +24,7 @@
     "textErrorEmptyAvatar": "Por favor, selecione seu avatar!",
     "textErrorDropdown": "Algo deu errado!",
     "textErrorSearch" : "Algo deu errado na Pesquisa!",
+    "textErrorHome":"Nenhum lugar próximo encontrado, comece a avaliar seu bairro!",
 
     "textSuccessRegistration":"Usuário Registrado",
 
@@ -53,6 +54,12 @@
     "textFinish":"Finalizar",
     "textClosePlaces":"Lugares Próximos",
     "textBestRates":"Melhores Avaliados",
+    "textSearch":"Search",
+    "textConfiguration":"Configurações",
+    "textPrivacy":"Privacidade",
+    "textTermsOfUse":"Termos de Uso",
+    "textAbout":"Sobre",
+    "textContact":"Contato",
 
     "textDontBeAfraidToBeCreative":"Agora escolha um nome para todos verem, seja criativo!",
     "textHowDoYouPreferWeReferToYou":"Como prefere que as pessoas se refiram a você?",
@@ -66,10 +73,10 @@
     "textSayYourNameThisInfoIsPrivate":"Nos diga seu nome!\nEssa informação aparecerá apenas para você.",
     "textTellUsTheEmailAssociatedWithYourAccount":"Nos diga seu e-mail, ele será associado a sua conta",
     "textYourRepresentationHereInside":"Uma representação sua aqui dentro!",
+    "textTypeTheNameOfAPlaceToSearch":"Digite o nome de um local para buscar.",
     
     "textExamplePronouns":"Exemplo: Ela/Dela, Elu/Delu, Ela/Elu",
 
-    "textSearchForm":"Search",
     
     "textOnBoarding1_0":"Foco em",
     "textOnBoarding1_1":"segurança",
@@ -79,7 +86,7 @@
     "textOnBoarding2_1":"segurança",
     "textOnBoarding3_0":"Descreva suas",
     "textOnBoarding3_1":"experiências",
-    "textOnBoarding3_2":"e avalie locais",
+    "textOnBoarding3_2":"e avalie locais"
 
     
 }
