register page 1 ok

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -75,6 +75,7 @@
     "textTellUsTheEmailAssociatedWithYourAccount":"Nos diga seu e-mail, ele será associado a sua conta",
     "textYourRepresentationHereInside":"Uma representação sua aqui dentro!",
     "textTypeTheNameOfAPlaceToSearch":"Digite o nome de um local para buscar.",
+    "textPasswordSpecifications":"Sua segurança é muito importante para nós.\n - Sua senha deve ter mais de 8 caracteres\n - letras e números",
     
     "textExamplePronouns":"Exemplo: Ela/Dela, Elu/Delu, Ela/Elu",
 
