--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -23,6 +23,8 @@
     "textErrorDifferentPasswords":"Os campos de senha devem ser iguais",
     "textErrorEmptyAvatar": "Por favor, selecione seu avatar!",
     "textErrorDropdown": "Algo deu errado!",
+    "textError": "Algo deu errado!",
+    "textErrorTryAgain": "Tente novamente em alguns instantes.",
     "textErrorSearch" : "Algo deu errado na Pesquisa!",
     "textErrorHome":"Nenhum lugar próximo encontrado, comece a avaliar seu bairro!",
     
@@ -61,6 +63,7 @@
     "textTermsOfUse":"Termos de Uso",
     "textAbout":"Sobre",
     "textContact":"Contato",
+    "textOk":"Ok",
 
     "textDontBeAfraidToBeCreative":"Agora escolha um nome para todos verem, seja criativo!",
     "textHowDoYouPreferWeReferToYou":"Como prefere que as pessoas se refiram a você?",
