--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -79,7 +79,10 @@
     "textYourRepresentationHereInside":"Uma representação sua aqui dentro!",
     "textTypeTheNameOfAPlaceToSearch":"Digite o nome de um local para buscar.",
     "textPasswordSpecifications":"Sua segurança é muito importante para nós.\n - Sua senha deve ter mais de 8 caracteres\n - letras e números",
-    
+    "textSelectAPicture":"Selecione uma foto antes de salvar.",
+    "textRegisterSuccess":"Cadastro realizado com sucesso!",
+    "textRegisterSuccessMessage":"Você será redirecionado para a página de login.",
+
     "textExamplePronouns":"Exemplo: Ela/Dela, Elu/Delu, Ela/Elu",
 
     
