--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -64,6 +64,7 @@
     "textAbout":"Sobre",
     "textContact":"Contato",
     "textOk":"Ok",
+    "textReviews":"Avaliações",
 
     "textDontBeAfraidToBeCreative":"Agora escolha um nome para todos verem, seja criativo!",
     "textHowDoYouPreferWeReferToYou":"Como prefere que as pessoas se refiram a você?",
