--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -29,7 +29,7 @@
     "textErrorDropdown": "Algo deu errado!",
     "textError": "Algo deu errado!",
     "textErrorTryAgain": "Tente novamente em alguns instantes.",
-    "textErrorSearch" : "Algo deu errado na Pesquisa!",
+    "textErrorSearch" : "Não achamos nenhum local com esse nome.\nQue tal adicionar ele?",
     "textErrorHome":"Nenhum lugar próximo encontrado, comece a avaliar seu bairro!",
     
 
