--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -79,6 +79,14 @@
     "textSeeLess":"Ver menos",
     "textDelete":"Remover",
     "textShare":"Compartilhar",
+    "textPersonalInformation":"Informações Pessoais",
+    "textEditProfile":"Editar Perfil",
+    "textLogout":"Sair",
+    "textDisableAccount":"Desativar Conta",
+    "textDeleteAccount":"Excluir Conta",
+    "textChangeEmail":"Alterar E-mail",
+    "textChangePassword":"Alterar Senha",
+    "textAccountInformation":"Informações da Conta",
 
     "textFeatureAvailableSoon":"Funcionalidade disponível em breve",
     "textDontBeAfraidToBeCreative":"Agora escolha um nome para todos verem, seja criativo!",
