mensagem para usuário
feat: criei a mensagem para o usuário "Texto copiado!"

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -137,6 +137,6 @@
     "textOnBoarding3_0":"Descreva suas",
     "textOnBoarding3_1":"experiências",
     "textOnBoarding3_2":"e avalie locais"
-
+    "textShareUserReview":"Texto copiado!"
     
 }
