feat: texto no intl
criado os textos no intl.

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -138,5 +138,7 @@
     "textOnBoarding3_1":"experiências",
     "textOnBoarding3_2":"e avalie locais"
     "textShareUserReview":"Texto copiado!"
+    "textSafePlaceButton1":"Não encontrou o local que estava procurando?"
+    "textSafePlaceButton1_1":"Crie ele aqui."
     
 }
