--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -125,6 +125,9 @@
     "textSomeProblemsHappend":"Alguns problemas aconteceram",
     "textChooseAClassificationForThisPlace":"Escolha uma classificação para esse lugar levando em conta as qualidades listadas!",
     "textCanYouGiveMoreDetails":"Você pode nos dar mais detalhes?",
+    "textShareUserReview":"Texto copiado!",
+    "textDontFoundThePlace":"Não encontrou o local que estava procurando?",
+    "textCreateHere":"Crie ele aqui.",
 
     "textExamplePronouns":"Exemplo: Ela/Dela, Elu/Delu, Ela/Elu",
 
@@ -137,8 +140,5 @@
     "textOnBoarding3_0":"Descreva suas",
     "textOnBoarding3_1":"experiências",
     "textOnBoarding3_2":"e avalie locais"
-    "textShareUserReview":"Texto copiado!"
-    "textSafePlaceButton1":"Não encontrou o local que estava procurando?"
-    "textSafePlaceButton1_1":"Crie ele aqui."
-    
+   
 }
