--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -141,6 +141,6 @@
     "textOnBoarding2_1":"segurança",
     "textOnBoarding3_0":"Descreva suas",
     "textOnBoarding3_1":"experiências",
-    "textOnBoarding3_2":"e avalie locais"
-   
+    "textOnBoarding3_2":"e avalie locais",
+    "textLocationError": "Ocorreu um erro ao obter sua localização!"
 }
