--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -134,6 +134,13 @@
     "textCreateHere":"Crie ele aqui.",
     "textDeleteUser":"usuário deletado com sucesso",
     "textExamplePronouns":"Exemplo: Ela/Dela, Elu/Delu, Ela/Elu",
+    "textConfirmPassword":"Confirme sua senha",
+    "textReenterPassword1_0":"Insira sua senha novamente",
+    "textReenterPassword1_1":"para continuar.",
+    "textConfirmCurrentPassword":"Confirme sua senha atual",
+    "textErrorConfirmPassword":"Não foi possível confirmar sua senha!",
+
+
 
     "textOnBoarding1_0":"Foco em",
     "textOnBoarding1_1":"segurança",
