--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -139,6 +139,17 @@
     "textReenterPassword1_1":"para continuar.",
     "textConfirmCurrentPassword":"Confirme sua senha atual",
     "textErrorConfirmPassword":"Não foi possível confirmar sua senha!",
+    "textSuccessCard1":"A maioria das pessoas",
+    "textSuccessCard2":"considera esse local seguro",
+    "textSuccessCard3":"para comunidade LGBTQIA+",
+    "textAlertCard1":"Algumas pessoas",
+    "textAlertCard2":"reportaram problemas",
+    "textAlertCard3":"associados a esse local para",
+    "textErrorCard1":"Local não recomendado.",
+    "textErrorCard2":"A maioria das pessoas não",
+    "textErrorCard3":"considera esse local seguro",
+
+
 
 
 
