-> New intl_utils emotion texts -> SafeEmotionGraphic widget

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -78,7 +78,10 @@
     "textYourReviews":"Suas Avaliações",
     "textAngry":"Irritado",
     "textUpset":"Chateado",
+    "textRegular":"Regular",
     "textNeutral":"Neutro",
+    "textSatisfied":"Satisfeito",
+    "textIncredible":"Incrível",
     "textHappy":"Contente",
     "textExcited":"Alegre",
     "textSeeMore":"Ver mais",
