--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -126,6 +126,7 @@
     "textRegisterSuccess":"Cadastro realizado com sucesso!",
     "textRegisterSuccessMessage":"Você será redirecionado para a página de login.",
     "textHowDoYouFeelAboutThisPlace":"Como você se sentiu nesse local?",
+    "textHowDoPeopleFellAboutThisPlace":"Como as pessoas se sentiram nesse local:",
     "textChooseAClassification":"Escolha uma classificação para este local!",
     "textSafeForLGBT":"Seguro para pessoas LGBTQIA+",
     "textDontRecomendThisPlace":"Não recomendo este lugar",
