--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -127,6 +127,7 @@
     "textRegisterSuccessMessage":"Você será redirecionado para a página de login.",
     "textHowDoYouFeelAboutThisPlace":"Como você se sentiu nesse local?",
     "textHowDoPeopleFellAboutThisPlace":"Como as pessoas se sentiram nesse local:",
+    "textWhatPeopleAreTalkingAboutThisPlace": "O que as pessoas estão falando sobre esse local:",
     "textChooseAClassification":"Escolha uma classificação para este local!",
     "textSafeForLGBT":"Seguro para pessoas LGBTQIA+",
     "textDontRecomendThisPlace":"Não recomendo este lugar",
