--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -78,7 +78,10 @@
     "textYourReviews":"Suas Avaliações",
     "textAngry":"Irritado",
     "textUpset":"Chateado",
+    "textRegular":"Regular",
     "textNeutral":"Neutro",
+    "textSatisfied":"Satisfeito",
+    "textIncredible":"Incrível",
     "textHappy":"Contente",
     "textExcited":"Alegre",
     "textSeeMore":"Ver mais",
@@ -123,6 +126,7 @@
     "textRegisterSuccess":"Cadastro realizado com sucesso!",
     "textRegisterSuccessMessage":"Você será redirecionado para a página de login.",
     "textHowDoYouFeelAboutThisPlace":"Como você se sentiu nesse local?",
+    "textHowDoPeopleFellAboutThisPlace":"Como as pessoas se sentiram nesse local:",
     "textChooseAClassification":"Escolha uma classificação para este local!",
     "textSafeForLGBT":"Seguro para pessoas LGBTQIA+",
     "textDontRecomendThisPlace":"Não recomendo este lugar",
@@ -132,8 +136,21 @@
     "textShareUserReview":"Texto copiado!",
     "textDontFoundThePlace":"Não encontrou o local que estava procurando?",
     "textCreateHere":"Crie ele aqui.",
-    "textDeleteUser":"usuário deletado com sucesso",
+    "textDeleteUser":"Usuário deletado com sucesso",
     "textExamplePronouns":"Exemplo: Ela/Dela, Elu/Delu, Ela/Elu",
+    "textConfirmPassword":"Confirme sua senha",
+    "textReenterPassword1_0":"Insira sua senha novamente",
+    "textReenterPassword1_1":"para continuar.",
+    "textConfirmCurrentPassword":"Confirme sua senha atual",
+    "textErrorConfirmPassword":"Não foi possível confirmar sua senha!",
+    "textMostPeopleSafePlace":"A maioria das pessoas\n considera esse local seguro\n para comunidade LGBTQIA+",
+    "textMostPeopleAlertPlace":"Algumas pessoas\n reportaram problemas\n associados a esse local para\n comunidade LGBTQIA+",
+    "textMostPeopleDangerPlace":"Local não recomendado.\n A maioria das pessoas não\n considera esse local seguro\n para comunidade LGBTQIA+",
+
+
+    "textSafeDialogTypeSucces":"Sucesso!",
+    "textSafeDialogTypeAlert":"Atenção!",
+    "textSafeDialogTypeError":"Erro!",
 
     "textOnBoarding1_0":"Foco em",
     "textOnBoarding1_1":"segurança",
