--- a/lib/src/l10n/intl_pt.arb
+++ b/lib/src/l10n/intl_pt.arb
@@ -110,6 +110,7 @@
     "textBackToLocation":"Voltar ao local",
     "textReviewCompleted":"Review Completa!",
     "textContinue":"Continuar",
+    "textSearchAPlace":"Pesquise locais pelo nome",
    
 
     "textFeatureAvailableSoon":"Funcionalidade disponível em breve",
