feat: SafeSnackBar para atualização do avatar do perfil adicionados
fix: SafeProfilePicturePage teve ModularState removido e adição do Modular.get() para pegar instância do `SafeProfilePicturBloC`.
MOTIVO: O ModularState, por padrão, tem um *auto dispose*, por isso ao atualizar o avatar do perfil e fechar a tela, esse auto dispose era chamado + o dispose do SafeBloC. Dessa forma, utilizar o Modular.get() é a melhor opção visto que não há chamada de um auto dispose do Modular, apenas do SafeBloC.

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -149,6 +149,8 @@
     "textMostPeopleAlertPlace":"Algumas pessoas\n reportaram problemas\n associados a esse local para\n comunidade LGBTQIA+",
     "textMostPeopleDangerPlace":"Local não recomendado.\n A maioria das pessoas não\n considera esse local seguro\n para comunidade LGBTQIA+",
 
+    "textAvatarSuccessUpated": "Avatar alterado com sucesso!",
+    "textFailedToUpdateAvatar": "Não foi possível alterar o avatar!",
 
     "textSafeDialogTypeSucces":"Sucesso!",
     "textSafeDialogTypeAlert":"Atenção!",
