--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -188,5 +188,7 @@
     "textAddLocationTypeNightClub": "Casa noturna",
     "textAddLocationExample": "Ex: Bar santa maria",
     "textAddLocationCepExample": "Ex: 04553434",
-    "textAddLocationAddress": "Ex: Rua Clodomiro"
+    "textAddLocationAddress": "Ex: Rua Clodomiro",
+
+    "textContacHowToHelpYou": "Nos conte como podemos te ajudar"
 }
