--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -190,6 +190,8 @@
     "textAddLocationCepExample": "Ex: 04553434",
     "textAddLocationAddress": "Ex: Rua Clodomiro",
 
+    "textOpenPermissions": "Abrir Permissões",
+
     "textContacHowToHelpYou": "Nos conte como podemos te ajudar",
     "textContacActionError": "Não foi possível realizar a ação."
 }
