--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -113,7 +113,7 @@
     
 
     "textFeatureAvailableSoon":"Funcionalidade disponível em breve",
-    "textDontBeAfraidToBeCreative":"Agora escolha um nome para todos verem, são no total 10 caracteres, seja criativo!",
+    "textDontBeAfraidToBeCreative":"Agora escolha um nome para todos verem, seja criativo!",
     "textHowDoYouPreferWeReferToYou":"Como prefere que as pessoas se refiram a você?",
     "textWeCareAboutYourSafety":"Sua segurança é muito importante para nós.",
     "textAtLeast8Characteres":"- Sua senha deve ter mais de 8 caracteres",
@@ -189,6 +189,8 @@
     "textAddLocationExample": "Ex: Bar santa maria",
     "textAddLocationCepExample": "Ex: 04553434",
     "textAddLocationAddress": "Ex: Rua Clodomiro",
+
+    "textOpenPermissions": "Abrir Permissões",
 
     "textContacHowToHelpYou": "Nos conte como podemos te ajudar",
     "textContacActionError": "Não foi possível realizar a ação.",
