alterações realizadas de acordo com o figma
Scroll está de acordo com o figma

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -80,7 +80,9 @@
     "textAngry":"Irritado",
     "textUpset":"Chateado",
     "textRegular":"Regular",
+    "textNeutral":"Neutro",
     "textSatisfied":"Satisfeito",
+    "textIncredible":"Incrível",
     "textHappy":"Contente",
     "textExcited":"Alegre",
     "textSeeMore":"Ver mais",
