--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -193,5 +193,9 @@
     "textOpenPermissions": "Abrir Permissões",
 
     "textContacHowToHelpYou": "Nos conte como podemos te ajudar",
-    "textContacActionError": "Não foi possível realizar a ação."
+    "textContacActionError": "Não foi possível realizar a ação.",
+
+    "textPasswordSuccessChanged": "Senha alterada com sucesso!",
+    "textPasswordFailureChanged": "Não foi possível alterar sua senha!"
+
 }
