bug:finalizada logica e validacoes - futuramente sera necessario refatorar

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -196,6 +196,8 @@
     "textContacActionError": "Não foi possível realizar a ação.",
 
     "textPasswordSuccessChanged": "Senha alterada com sucesso!",
-    "textPasswordFailureChanged": "Não foi possível alterar sua senha!"
+    "textPasswordFailureChanged": "Não foi possível alterar sua senha!",
+	
+	"textRegisterValidateUserName":"O nome não pode ter menos que 3 letras."
 
 }
