--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -198,6 +198,10 @@
     "textPasswordSuccessChanged": "Senha alterada com sucesso!",
     "textPasswordFailureChanged": "Não foi possível alterar sua senha!",
 	
-	"textRegisterValidateUserName":"O nome não pode ter menos que 3 letras."
+	"textRegisterValidateUserName":"O nome não pode ter menos que 3 letras.",
+
+    "textCriticalErrorPageTitle": "Ocorreu um erro inesperado!",
+    "textCriticalErrorPageBody": "Encontramos uma situação inesperada na aplicação. Estamos trabalhando o mais rápido possivel para corrigi-la!",
+    "textCriticalErrorPageGoToReport": "Reportar erro"
 
 }
