feat #116: Salvando e-mail do usuário no `SharedPreferences`; Resgatando e-mail do usuário na tela de Alterar E-mail diretamente do `SharedPreferences`; Pendente: Integrar com endpoint de alterar e-mail (ainda não disponível)

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -200,13 +200,12 @@
 	
 	"textRegisterValidateUserName":"O nome não pode ter menos que 3 letras.",
 
-<<<<<<< HEAD
+
     "textYourCurrentEmailIs": "Seu e-mail atual é",
-    "textWhatWillBeYourEmailAddress": "Qual será o novo endereço de e-mail?"
-=======
+    "textWhatWillBeYourEmailAddress": "Qual será o novo endereço de e-mail?",
     "textCriticalErrorPageTitle": "Ocorreu um erro inesperado!",
     "textCriticalErrorPageBody": "Encontramos uma situação inesperada na aplicação. Estamos trabalhando o mais rápido possivel para corrigi-la!",
-    "textCriticalErrorPageGoToReport": "Reportar erro"
->>>>>>> 3b6dd65ec92aca0c92109ecdcc4b0765a3fc935d
-
+    "textCriticalErrorPageGoToReport": "Reportar erro",
+    
+    "textChange": "Alterar"
 }
