--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -115,6 +115,7 @@
     "textInformationChangedSuccessfully":"Informações atualizadas com sucesso!",
     "textUnableToChangeInformation":"Não foi possível atualizar as informações!",
     "textAddLocation":"Adicionar Local",
+    "textOptions":"Opções",
     
 
     "textFeatureAvailableSoon":"Funcionalidade disponível em breve",
