feat #115: Tela de desativar conta; Snackbar implementados;

--- a/lib/l10n/intl_pt.arb
+++ b/lib/l10n/intl_pt.arb
@@ -220,5 +220,8 @@
     
     "textDeactivateAccount": "Desativar conta",
 
+    "textDeactivatedAccountSuccess": "Conta desativada com sucesso!",
+    "textNotPossibleDeativateAccount": "Não foi possível desativar sua conta, tente novamente mais tarde.",
+
     "textChange": "Alterar"
 }
